--- a/src/css/Todos.css
+++ b/src/css/Todos.css
@@ -5,6 +5,9 @@
     padding: 1rem;
     text-align: left;
     border-radius: .5rem;
+    display: flex;
+    flex-direction: column;
+    gap: 2.5rem;
 }
 .todo-header {
     width: 100%;
@@ -12,18 +15,27 @@
     justify-content: space-between;
     padding: .5rem;
 }
+.todo-footer {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 1rem;
+    text-align: center;
+}
 .todo-content {
     width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     padding: .1rem .5rem;
+    gap: .5rem;
 }
-.btn-danger {
-    background: rgb(255, 35, 80);
-    align-self: flex-start;
+.todo-content__buttons {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: .25rem;
 }
-.btn-danger:hover {
-    background: rgb(215, 0, 50);
-}
-.mark { color: rgb(255, 0, 55); font-weight: 900; }
+.red { color: rgb(255, 0, 55); font-weight: 900; }
+.red.normal { font-weight: 700; }
+.green { color: rgb(26, 185, 98); font-weight: 900; }
