--- a/src/css/App.css
+++ b/src/css/App.css
@@ -70,7 +70,7 @@ h1 {
 .text-container {
     width: 100%;
     height: 40vh;
-    background-image: linear-gradient(to bottom, rgba(26, 26, 26, 0.9), rgba(185, 60, 70, 0.5)), url('../img/bg.jpg');
+    background-image: linear-gradient(to bottom, rgba(26, 26, 26, 0.9), rgba(185, 60, 70, 0.5)), url('../img/bg.png');
     background-repeat: no-repeat;
     background-position: 80% 80%;
     background-size: cover;
